force-app/main/default/objects/Event_Registration__c/fields/Cancelled_Text__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Text__c</fullName>
    <defaultValue>&quot;false&quot;</defaultValue>
    <label>Cancelled Text</label>
    <length>5</length>
    <type>Text</type>
</CustomField>