force-app/main/default/objects/Event_Registration__c/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <formula>CASE(Contact__r.Contact_Type__c, &quot;Customer&quot;, &quot;Customer&quot;, &quot;Partner&quot;, &quot;Partner&quot;, &quot;Employee&quot;, &quot;Employee&quot;, &quot;Customer&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Type</label>
    <type>Text</type>
</CustomField>