force-app/main/default/objects/Event_Registration__c/fields/Dietary_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Dietary_of_Contact__c</fullName>
    <formula>TEXT(Contact__r.Dietary_of_Contact__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dietary of Contact</label>
    <type>Text</type>
</CustomField>