force-app/main/default/objects/Event_Registration__c/fields/Number_of_Registered_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Registered_Sessions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Registered Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>