force-app/main/default/objects/Event_Registration__c/fields/Registration_Id__c.field-meta.xml
<CustomField>
    <fullName>Registration_Id__c</fullName>
    <externalId>true</externalId>
    <label>Registration Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>